[package]
name = "zk_evm_abstractions"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
static_assertions = "1"
num_enum = "0.6"

# TODO: change to use matter-labs when everything is merged:
# zkevm_opcode_defs = { git = "https://github.com/matter-labs/era-zkevm_opcode_defs.git", branch = "dl-precompiles" }
zkevm_opcode_defs = { git = "https://github.com/distributed-lab/era-zkevm_opcode_defs.git", branch = "feature/ec-and-modexp-precompiles" }
# zkevm_opcode_defs = { path = "../era-zkevm_opcode_defs" }


[dev-dependencies]
hex = "0.4"
